Update README.md and Swagger docs
